<resources>
    <string name="app_name">Wardrobe</string>
    <string name="password">Password</string>
    <string name="hello_again">Hello Again!</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="registration">Registration</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="re_type_your_password">Re-type your password</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="discover_your">Discover your</string>
    <string name="New_Outfit_Here">New Outfit Here</string>
    <string name="Explore_all_the_most_exciting_and">Explore all the most exciting and</string>
    <string name="latest_outfit_based_on_your_interest">latest outfit based on your interest</string>
    <string name="recovery_password">Recovery password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="wardrobe">Wardrobe</string>
    <string name="wardrobe2">Wardrobe</string>
    <string name="line">Horizontal Line</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_continue">Please sign in to continue.</string>
    <string name="no_account">Don’t Have an Account? Click Here</string>
    <string name="google_btn">Google</string>
    <string name="facebook_btn">Facebook</string>
    <string name="instagram_btn">Instagram</string>
    <string name="posts">Posts</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="fullname">Full Name</string>
    <string name="search">Search</string>
    <string name="search_btn">Search icon</string>
    <string name="settings_icon">Setting</string>
    <string name="dashboard_icon">Dashboard</string>
    <string name="bookmark_icon">Bookmark</string>
    <string name="options_icon">Option</string>
    <string name="notification_icon">Notification</string>
    <string name="profile_icon">Profile</string>
    <string name="logo_icon">Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="evening_wear">Evening Wear</string>
</resources>